--- a/test.ipynb
+++ b/test.ipynb
@@ -36,7 +36,9 @@
     }
    ],
    "source": [
-    "preprocess_data('I want to go to the movies and eliminate stopwords and normalize #hastags and @mentions and URLs like https://t.co/1234abcd')"
+    "preprocess_data(\n",
+    "    \"I want to go to the movies and eliminate stopwords and normalize #hastags and @mentions and URLs like https://t.co/1234abcd\"\n",
+    ")"
    ]
   }
  ],
