--- a/Lab2/runs.ipynb
+++ b/Lab2/runs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,41 @@
       "0.6862 0.6825\n",
       "RF\n",
       "0.6771 0.6773\n",
-      "Epoch 1/3, Loss: 0.5976\n"
+      "Blip:  0\n",
+      "Mami:  False\n",
+      "Gen Test:  False\n",
+      "SVC\n",
+      "0.6844 0.672\n",
+      "RF\n",
+      "0.6569 0.6381\n",
+      "Blip:  1\n",
+      "Mami:  True\n",
+      "Gen Test:  False\n",
+      "SVC\n",
+      "0.5835 0.5877\n",
+      "RF\n",
+      "0.5817 0.5867\n",
+      "Blip:  1\n",
+      "Mami:  False\n",
+      "Gen Test:  False\n",
+      "SVC\n",
+      "0.6073 0.5934\n",
+      "RF\n",
+      "0.5817 0.5574\n",
+      "Blip:  2\n",
+      "Mami:  True\n",
+      "Gen Test:  False\n",
+      "SVC\n",
+      "0.7064 0.7044\n",
+      "RF\n",
+      "0.6734 0.6661\n",
+      "Blip:  2\n",
+      "Mami:  False\n",
+      "Gen Test:  False\n",
+      "SVC\n",
+      "0.6807 0.6711\n",
+      "RF\n",
+      "0.6624 0.6458\n"
      ]
     }
    ],
@@ -42,6 +76,31 @@
     "for b in range(3):\n",
     "    for m in [True, False]:\n",
     "        main(b, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blip:  2\n",
+      "Mami:  True\n",
+      "Gen Test:  True\n",
+      "Blip:  0\n",
+      "Mami:  True\n",
+      "Gen Test:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# gen outputs with best params\n",
+    "\n",
+    "main(2, True, True, \"SVC\")\n",
+    "main(0, True, True, \"RF\")"
    ]
   }
  ],
