--- a/Lab3/runs.ipynb
+++ b/Lab3/runs.ipynb
@@ -20,17 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3, Loss: 0.6992\n",
-      "Epoch 2/3, Loss: 0.5740\n",
-      "Epoch 3/3, Loss: 0.3553\n",
-      "0.6981 0.6972\n"
+      "Epoch 1/5, Loss: 0.6804\n",
+      "Epoch 2/5, Loss: 0.5502\n",
+      "Epoch 3/5, Loss: 0.3410\n",
+      "Epoch 4/5, Loss: 0.1650\n",
+      "Epoch 5/5, Loss: 0.0664\n",
+      "0.6918 0.6917\n"
      ]
     }
    ],
@@ -40,17 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertModel were not initialized from the model checkpoint at dccuchile/bert-base-spanish-wwm-cased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3, Loss: 0.7004\n",
-      "Epoch 2/3, Loss: 0.6781\n",
-      "Epoch 3/3, Loss: 0.6658\n",
-      "0.6173 0.6178\n"
+      "Epoch 1/5, Loss: 0.6644\n",
+      "Epoch 2/5, Loss: 0.5261\n",
+      "Epoch 3/5, Loss: 0.2990\n",
+      "Epoch 4/5, Loss: 0.0815\n",
+      "Epoch 5/5, Loss: 0.0760\n",
+      "0.5926 0.5819\n"
      ]
     }
    ],
@@ -67,10 +79,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3, Loss: 0.6975\n",
-      "Epoch 2/3, Loss: 0.6140\n",
-      "Epoch 3/3, Loss: 0.5230\n",
-      "0.6667 0.6667\n"
+      "Epoch 1/5, Loss: 0.6846\n",
+      "Epoch 2/5, Loss: 0.6180\n",
+      "Epoch 3/5, Loss: 0.4819\n",
+      "Epoch 4/5, Loss: 0.3261\n",
+      "Epoch 5/5, Loss: 0.1636\n",
+      "0.6716 0.6697\n"
      ]
     }
    ],
@@ -80,22 +94,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "BertSdpaSelfAttention is used but `torch.nn.functional.scaled_dot_product_attention` does not support non-absolute `position_embedding_type` or `output_attentions=True` or `head_mask`. Falling back to the manual attention implementation, but specifying the manual implementation will be required from Transformers version v5.0.0 onwards. This warning can be removed using the argument `attn_implementation=\"eager\"` when loading the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 0.6721\n",
+      "Epoch 2/5, Loss: 0.5905\n",
+      "Epoch 3/5, Loss: 0.4771\n",
+      "Epoch 4/5, Loss: 0.3248\n",
+      "Epoch 5/5, Loss: 0.2297\n",
+      "0.6965 0.6952\n"
+     ]
+    }
+   ],
+   "source": [
+    "main(language=[\"ES\",\"EN\"], model_name='hate-speech-CNERG/bert-base-uncased-hatexplain')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3, Loss: 0.6905\n",
-      "Epoch 2/3, Loss: 0.6175\n",
-      "Epoch 3/3, Loss: 0.5315\n",
-      "0.6468 0.639\n"
+      "Generando test\n"
      ]
     }
    ],
    "source": [
-    "main(language=[\"ES\",\"EN\"], model_name='hate-speech-CNERG/bert-base-uncased-hatexplain')"
+    "main(language=[\"ES\",\"EN\"], model_name='bert-base-uncased', gen_test=True)"
    ]
   }
  ],
