--- a/Lab3/runs.ipynb
+++ b/Lab3/runs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando test\n",
+      "Epoch 1/5, Loss: 0.6863\n",
+      "Epoch 2/5, Loss: 0.5940\n",
+      "Epoch 3/5, Loss: 0.4807\n",
+      "Epoch 4/5, Loss: 0.3299\n",
+      "Epoch 5/5, Loss: 0.2270\n"
+     ]
+    }
+   ],
+   "source": [
+    "main(language=[\"ES\",\"EN\"], model_name='bert-base-uncased', gen_test=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,10 +154,88 @@
      "text": [
       "Generando test\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "BertSdpaSelfAttention is used but `torch.nn.functional.scaled_dot_product_attention` does not support non-absolute `position_embedding_type` or `output_attentions=True` or `head_mask`. Falling back to the manual attention implementation, but specifying the manual implementation will be required from Transformers version v5.0.0 onwards. This warning can be removed using the argument `attn_implementation=\"eager\"` when loading the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 0.6567\n",
+      "Epoch 2/5, Loss: 0.5430\n",
+      "Epoch 3/5, Loss: 0.3927\n",
+      "Epoch 4/5, Loss: 0.2441\n",
+      "Epoch 5/5, Loss: 0.1419\n"
+     ]
     }
    ],
    "source": [
-    "main(language=[\"ES\",\"EN\"], model_name='bert-base-uncased', gen_test=True)"
+    "main(language=[\"ES\",\"EN\"], model_name='hate-speech-CNERG/bert-base-uncased-hatexplain' , gen_test=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len EN 794\n",
+      "Generando test\n",
+      "Epoch 1/5, Loss: 0.6427\n",
+      "Epoch 2/5, Loss: 0.5222\n",
+      "Epoch 3/5, Loss: 0.3136\n",
+      "Epoch 4/5, Loss: 0.1378\n",
+      "Epoch 5/5, Loss: 0.0584\n"
+     ]
+    }
+   ],
+   "source": [
+    "main(language=[\"EN\"], model_name='bert-base-uncased', gen_test=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len ES 1212\n",
+      "Generando test\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertModel were not initialized from the model checkpoint at dccuchile/bert-base-spanish-wwm-cased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, Loss: 0.6526\n",
+      "Epoch 2/5, Loss: 0.4990\n",
+      "Epoch 3/5, Loss: 0.2685\n",
+      "Epoch 4/5, Loss: 0.0721\n",
+      "Epoch 5/5, Loss: 0.1085\n"
+     ]
+    }
+   ],
+   "source": [
+    "main(language=[\"ES\"], model_name='dccuchile/bert-base-spanish-wwm-cased', gen_test=True)"
    ]
   }
  ],
