🐛 Fix project runs

--- a/Exist2025/test.ipynb
+++ b/Exist2025/test.ipynb
@@ -7,8 +7,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load_ext autoreload\n",
-    "# %autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "69136e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******************************************************\n",
+      "Analizing file task3_1_soft_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_1_soft_ScalaR_1.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_3_hard_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_3_hard_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_1_hard_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_1_hard_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_2_hard_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_2_hard_ScalaR_1.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_3_soft_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_3_soft_ScalaR_1.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_1_hard_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_1_hard_ScalaR_1.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_2_hard_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_2_hard_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_1_soft_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_1_soft_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_3_soft_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_3_soft_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_2_soft_ScalaR_2.json\n",
+      "Run file:  exist2025_ScalaR/task3_2_soft_ScalaR_2.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_3_hard_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_3_hard_ScalaR_1.json\n",
+      "******************************************************\n",
+      "******************************************************\n",
+      "Analizing file task3_2_soft_ScalaR_1.json\n",
+      "Run file:  exist2025_ScalaR/task3_2_soft_ScalaR_1.json\n",
+      "******************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "from val import process_format_runs_by_task\n",
+    "process_format_runs_by_task(\"exist2025_ScalaR/\")"
    ]
   },
   {
